# SynthPluginDemo

./: CMakeLists.txt
include/: DDS.h  Generator.h  Plugin.h
src/: Plugin.cpp
